# rs-questions-answers

./: .env.example  Cargo.toml  README.md  build.rs  docker-compose.yml  log4rs.yml
docs/: chapter9.md
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs
migrations/: 20220716094815_answers.up.sql  20220807200757_create_accounts-table.down.sql  20220815143456_extend_questions_table.down.sql  20220815143456_extend_questions_table.up.sql  20220815143505_extend_answers_table.down.sql
src/: crypt.rs  main.rs  profanity.rs  store.rs
src/handlers/: answers.rs  auth.rs  mod.rs  questions.rs
src/types/: account.rs  answers.rs  bad_words.rs  mod.rs  pagination.rs  questions.rs
