[package]
name = "questions_answers"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.2", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
parking_lot = "0.12.0"
handle-errors = { path = "handle-errors" }
log = "0.4"
log4rs = "1.0"