[package]
name = "questions_answers"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.2", features = ["full"] }
warp = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.81"}
parking_lot = { version = "0.12.0" }
handle-errors = { path = "handle-errors" }
tracing = { version = "0.1.35", features = ["log"] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
uuid = { version = "0.8", features = ["v4"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "migrate", "postgres" ] }
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = { version = "0.1.1" }
reqwest-retry = { version = "0.1.1" }
rand = { version = "0.8" }
rust-argon2 = { version = "1.0" }
paseto = { version = "2.0.2+1.0.3" }
chrono = { version = "0.4.22" }
dotenv = { version = "0.15.0" }

[build-dependencies]
platforms = "2.0.0"